<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CompanyDashboard">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:background="@drawable/background1"
      android:orientation="vertical"
      android:padding="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

    <Button
        android:id="@+id/btnCompanyMyJobs"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/txtMyJobs"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCompanyProfile"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/txtCompanyProfile"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCreateJob"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/txtCreateJob"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAllGigs"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/txtFreelancers"
        android:textColor="@color/text_color"
        android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout14"
      android:layout_width="409dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="1dp"
      android:background="@drawable/heading"
      android:orientation="horizontal"
      android:paddingTop="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingRight="10dp"
        android:text="@string/txtCompany"
        android:textAlignment="viewEnd"
        android:textColor="@color/btn_color"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtName"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textStyle="bold" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>