<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginChoose">

    <Button
        android:id="@+id/btnChooseUser"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/txtUser"
        android:textColor="@color/text_color"
        android:textSize="@dimen/btnSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestionFirst" />

    <Button
        android:id="@+id/btnChooseCompany"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/txtCompany"
        android:textColor="@color/text_color"
        android:textSize="@dimen/btnSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseUser" />

    <TextView
        android:id="@+id/txtQuestionFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@drawable/background1"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/txtContinue"
        android:textColor="@color/text_color"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@drawable/heading"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="@string/txtWelcome"
            android:textAlignment="viewEnd"
            android:textColor="@color/btn_color"
            android:textSize="@dimen/headingSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtJobPortal"
            android:textColor="@color/text_color"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnChooseAdmin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btn_color"
        android:text="Admin"
        android:textColor="@color/black"
        android:textSize="@dimen/btnSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseCompany" />
</androidx.constraintlayout.widget.ConstraintLayout>