<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AdminDashboard">

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="330dp"
        android:layout_height="274dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/background1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtNoCompany"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="5dp"
                android:text="@string/txtCompanies"
                android:textColor="@color/text_color"
                android:textSize="@dimen/secondHeadingSize" />

            <TextView
                android:id="@+id/txtCompanyValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/valuebackground"
                android:paddingTop="5dp"
                android:text="12"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/background1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtNoJobs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="5dp"
                android:text="@string/txtJobs"
                android:textColor="@color/text_color"
                android:textSize="@dimen/secondHeadingSize" />

            <TextView
                android:id="@+id/txtJobsValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/valuebackground"
                android:paddingTop="5dp"
                android:text="26"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/background1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtNoUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="5dp"
                android:text="@string/txtUsers"
                android:textColor="@color/text_color"
                android:textSize="@dimen/secondHeadingSize" />

            <TextView
                android:id="@+id/txtUserValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/valuebackground"
                android:paddingTop="5dp"
                android:text="25"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/background1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtNoFreelance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingTop="5dp"
                android:text="@string/txtFreelancers"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtFreelanceValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/valuebackground"
                android:paddingTop="5dp"
                android:text="44"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/heading"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="@string/txtAdmin"
            android:textAlignment="viewEnd"
            android:textColor="@color/btn_color"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtDashboard"
            android:textColor="@color/text_color"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnViewCompanyRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/btn_color"
        android:text="Company Requests"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19" />

    <Button
        android:id="@+id/btnViewGigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/btn_color"
        android:text="Freelance Gigs"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewCompanyRequests" />

    <Button
        android:id="@+id/btnGoAdminProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/btn_color"
        android:text="Profile"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewGigs" />
</androidx.constraintlayout.widget.ConstraintLayout>